# BinanceConnectorCpp

./: .gitignore  CMakeLists.txt  README.md  WINDOWS11_INSTALLATION.md  api.cpp  api.hpp  conanfile.py  endpoints.json  error.hpp  main.cpp
Catch/: CMakeLists.txt
binance/: CMakeLists.txt  api.cpp  api.hpp  api_declarations.hpp
binance/derivatives_trading/: CMakeLists.txt  derivatives_trading.cpp  derivatives_trading.hpp
binance/derivatives_trading/um_futures/: CMakeLists.txt  account.cpp  account.hpp  account_parsing_simdjson.hpp  convert.cpp  convert.hpp  convert_parsing_simdjson.hpp  market_data.cpp  market_data.hpp  market_data_parsing_simdjson.hpp  portfolio_margin_endpoints.cpp  portfolio_margin_endpoints.hpp  portfolio_margin_endpoints_parsing_simdjson.hpp  trade.cpp  trade.hpp  trade_parsing_simdjson.hpp  websocket_api.cpp  websocket_api.hpp  websocket_connection.cpp  websocket_connection.hpp  websocket_market_streams.cpp  websocket_market_streams.hpp  websocket_market_streams_parsing_simdjson.hpp  websocket_user_data_streams.cpp  websocket_user_data_streams.hpp  websocket_user_data_streams_parsing_simdjson.hpp
binance/lib/: CMakeLists.txt  HTTPClient.cpp  HTTPClient.hpp  WebSocketClient.cpp  authentication.cpp  authentication.hpp  http_client.cpp  http_client.hpp  utils.cpp  utils.hpp  websocket_client.cpp  websocket_client.hpp
config/: binanceconnectorcpp
lib/: CMakeLists.txt  HTTPClient.cpp  HTTPClient.hpp  WebSocketClient.cpp  WebSocketClient.hpp  authentication.cpp  authentication.hpp  utils.cpp  utils.hpp
